--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @import "../styles/glow.css";
+@import "../styles/editor.css";
 
 @custom-variant dark (&:is(.dark *));
 
